objects/FormatosImpresion__c/FormatosImpresion__c.object-meta.xml
<CustomObject>
    <description>Objeto para generar y guardar los formatos de impresión necesarios para la cotización para crear el PDF y mandarlo a el cliente para su revisión</description>
    <label>Formatos de impresión</label>
    <nameField>
        <label>Nombre de Formatos de Impresión</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formatos de impresión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>