objects/FormatosImpresion__c/fields/ContenidoFormato__c.field-meta.xml
<CustomField>
    <fullName>ContenidoFormato__c</fullName>
    <description>Ingresar párrafos y contenido del documento</description>
    <label>Contenido del formato</label>
    <length>100768</length>
    <type>Html</type>
</CustomField>