objects/FormatosImpresion__c/fields/ObjetoRelacionado__c.field-meta.xml
<CustomField>
    <fullName>ObjetoRelacionado__c</fullName>
    <description>String del objeto al que pertenece el formato</description>
    <label>Objeto relacionado</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>