objects/FormatosImpresion__c/fields/TerminosCondiciones__c.field-meta.xml
<CustomField>
    <fullName>TerminosCondiciones__c</fullName>
    <description>Términos y condiciones del documento para la cotización</description>
    <label>Terminos y Condiciones</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>