objects/FormatosImpresion__c/fields/TituloDelFormato__c.field-meta.xml
<CustomField>
    <fullName>TituloDelFormato__c</fullName>
    <description>Título que lleva el formato</description>
    <label>Título del formato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>